# manim-demo

./: calc_pi.py  default_config.yml  pi_calculation.ipynb  pi_calculation.py  pyproject.toml
manimlib/: default_config.yml
tests/: route_interpolator.py
utils/: route_interpolator.py
