[tool.poetry]
name = "manimdemo"
version = "0.1.0"
description = ""
authors = ["Leo Trubach <leotrubach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
manim = "^0.18.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
